--- a/src/styles/BotControl.css
+++ b/src/styles/BotControl.css
@@ -1,5 +1,5 @@
 .bot-control-panel {
-  border: 2px solid black;
+  border: 4px solid black;
   margin: 1%;
   display: flex;
   flex-direction: column;
@@ -7,19 +7,28 @@
 }
 
 .control-header {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   width: fit-content;
   text-align: center;
 }
 
-.direction-control {
-  border: 2px solid blue;
+.keyboard-control {
+  border: 2px solid black;
+  padding: 2%;
+}
+
+.keyboard-control:focus {
+  border: 8px solid green;
+}
+
+.keyboard-keys {
+  border: 2px solid black;
   margin: 1%;
   padding:2%;
   width: fit-content;
   display: grid;
   gap: 5px 5px;
-  grid-template-columns: repeat(6, 50px);
+  grid-template-columns: repeat(8, 50px);
   grid-template-rows: repeat(2, 50px);
 }
 
@@ -27,16 +36,19 @@
   border: 2px solid green;
 }
 
-.dir-btn {
+.ctl-btn {
   border: 2px solid black;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.dir-btn:hover {
+.ctl-btn:hover {
   border: 2px solid green;
 }
+
+
+/* Motor Contorl */
 
 .dir-left {
   grid-column: 1;
@@ -59,17 +71,36 @@
   grid-row: 2;
 }
 
-.dir-a {
-  grid-column: 5;
-  grid-row: 2;
+.dir-stop {
+  grid-column: 1;
+  grid-row: 1;
+
 }
 
-.dir-b {
+.dir-faster {
+  grid-column: 3;
+  grid-row: 1;
+}
+
+
+/* Camera Control */
+
+.pan-left {
   grid-column: 6;
   grid-row: 2;
 }
 
-/* Keyboard */
-.keyboard-active {
-  border: 2px solid green;
+.pan-right {
+  grid-column: 8;
+  grid-row: 2;
+}
+
+.tilt-up {
+  grid-column: 7;
+  grid-row: 1;
+}
+
+.tilt-down {
+  grid-column: 7;
+  grid-row: 2;
 }
