--- a/src/styles/BotControl.css
+++ b/src/styles/BotControl.css
@@ -29,12 +29,12 @@
   display: grid;
   gap: 5px 5px;
   grid-template-columns: repeat(8, 50px);
-  grid-template-rows: repeat(2, 50px);
+  grid-template-rows: repeawwwwwt(2, 50px);
 }
 
-.btn-active {
-  border: 2px solid green;
-}
+/* .btn-active {
+  border: 8px solid green;
+} */
 
 .ctl-btn {
   border: 2px solid black;
