--- a/src/styles/BotControl.css
+++ b/src/styles/BotControl.css
@@ -1,5 +1,29 @@
+
+.main-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cam-div {
+  border: 4px solid black;
+}
+
+.rover-cam {
+  object-fit: contain;
+  width: 40vw;
+  height: auto;
+}
+
+.bot-img {
+  margin: 2%;
+  width: 40vw;
+  height: auto;
+}
+
 .bot-control-panel {
   border: 4px solid black;
+  width: 40vw;
   margin: 1%;
   display: flex;
   flex-direction: column;
@@ -11,6 +35,7 @@
   width: fit-content;
   text-align: center;
 }
+
 
 .keyboard-control {
   border: 2px solid black;
@@ -29,7 +54,7 @@
   display: grid;
   gap: 5px 5px;
   grid-template-columns: repeat(8, 50px);
-  grid-template-rows: repeawwwwwt(2, 50px);
+  grid-template-rows: repeawwwwwt(4, 50px);
 }
 
 /* .btn-active {
@@ -44,7 +69,8 @@
 }
 
 .ctl-btn:hover {
-  border: 2px solid green;
+  /* border: 2px solid green; */
+  color: green;
 }
 
 
@@ -103,4 +129,9 @@
 .tilt-down {
   grid-column: 7;
   grid-row: 2;
+}
+
+.cam-pic {
+  grid-column: 6;
+  grid-row: 1;
 }
