--- a/src/styles/BotControl.css
+++ b/src/styles/BotControl.css
@@ -6,7 +6,7 @@
 }
 
 .cam-div {
-  border: 4px solid black;
+  border: 4px solid green;
 }
 
 .rover-cam {
@@ -22,8 +22,8 @@
 }
 
 .bot-control-panel {
-  border: 4px solid black;
-  width: 40vw;
+  border: 4px solid blue;
+  width: 60vw;
   margin: 1%;
   display: flex;
   flex-direction: column;
@@ -35,7 +35,6 @@
   width: fit-content;
   text-align: center;
 }
-
 
 .keyboard-control {
   border: 2px solid black;
@@ -50,11 +49,11 @@
   border: 2px solid black;
   margin: 1%;
   padding:2%;
-  width: fit-content;
+  /* width: fit-content; */
   display: grid;
   gap: 5px 5px;
   grid-template-columns: repeat(8, 50px);
-  grid-template-rows: repeawwwwwt(4, 50px);
+  grid-template-rows: repeat(2, 50px);
 }
 
 /* .btn-active {
@@ -72,7 +71,6 @@
   /* border: 2px solid green; */
   color: green;
 }
-
 
 /* Motor Contorl */
 
@@ -107,7 +105,6 @@
   grid-column: 3;
   grid-row: 1;
 }
-
 
 /* Camera Control */
 
