--- a/src/styles/BotControl.css
+++ b/src/styles/BotControl.css
@@ -56,12 +56,12 @@
   grid-template-rows: repeat(2, 50px);
 }
 
-/* .btn-active {
-  border: 8px solid green;
-} */
+.active {
+  border: 4px solid green;
+}
 
 .ctl-btn {
-  border: 2px solid black;
+  /* border: 2px solid black; */
   display: flex;
   align-items: center;
   justify-content: center;
